Lab 2- resposive web design completed
Lab 2 for class completed

--- a/01-nav.html
+++ b/01-nav.html
@@ -1,4 +1,6 @@
-<a href="#">Home</a>
-<a href="#">Our Clients</a>
-<a href="#">About Us</a>
-<a href="#">Careers</a>
+<div class="eight columns nav">
+    <a class="button button-primary" href="#">Home</a>
+    <a class="button" href="#">Our Clients</a>
+    <a class="button" href="#">About Us</a>
+    <a class="button" href="#">Careers</a>
+</div>
